# bekoedit

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  index.html  package.json  vite.config.ts
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
crates/bekoedit-app/: Cargo.toml
crates/bekoedit-app/assets/: editor-bundle.js  focus-guard-bundle.js  shortcuts.js  style.css
crates/bekoedit-app/js/: build.mjs  package-lock.json  package.json
crates/bekoedit-app/js/src/: editor.js  focus-guard-bootstrap.js  focus-guard.js  lifecycle.js  transport.js
crates/bekoedit-app/js/test/: focus-guard.test.mjs  lifecycle.test.mjs  transport.test.mjs  webview-smoke-driver.test.mjs
crates/bekoedit-app/src/: app.rs  bridge.rs  error_keys.rs  i18n.rs  main.rs  persistence.rs  settings.rs  smoke_test.rs  source_sync.rs  state.rs  tests.rs  webview_smoke.rs
crates/bekoedit-app/src/components/: app_bar.rs  backlinks_panel.rs  conflict_banner.rs  editor_header.rs  explorer.rs  form_mode.rs  history_panel.rs  icons.rs  mod.rs  outline_panel.rs  preview_mode.rs  recovery_screen.rs  search_panel.rs  settings_screen.rs  source_editor_host.rs  split_mode.rs  start_screen.rs  status_bar.rs  text_mode.rs  toast.rs
crates/bekoedit-app/src/components/form_mode/: block_view.rs  inline_toolbar.rs
crates/bekoedit-app/src/persistence/: tests.rs
crates/bekoedit-app/src/source_sync/: commands.rs  controller.rs  focus.rs  host.rs  lifecycle.rs
crates/bekoedit-app/src/source_sync/controller/: interaction.rs  support.rs  tests.rs
crates/bekoedit-app/src/source_sync/controller/tests/: instance_drop.rs  protocol.rs
crates/bekoedit-app/src/source_sync/host/: tests.rs
crates/bekoedit-app/src/source_sync/lifecycle/: controller_support.rs  tests.rs  transitions.rs
crates/bekoedit-app/src/source_sync/lifecycle/tests/: controller_support.rs
crates/bekoedit-app/src/webview_smoke/: driver.js  protocol.rs  tests.rs
crates/bekoedit-core/: Cargo.toml  README.md
crates/bekoedit-core/src/: conflict.rs  lib.rs  save.rs  session.rs  store.rs  store_exports.rs  store_file_ops.rs  store_history.rs  store_sections.rs  store_templates.rs  tests.rs
crates/bekoedit-core/src/tests/: delete_tests.rs  persistence_tests.rs  session_tests.rs  untitled_tests.rs
crates/bekoedit-fs/: Cargo.toml  README.md
crates/bekoedit-fs/src/: atomic.rs  backlinks.rs  git_status.rs  history.rs  lib.rs  ops.rs  paths.rs  recent.rs  recovery.rs  search.rs  settings.rs  templates.rs  tests.rs  tree.rs  watcher.rs  workspace.rs
crates/bekoedit-fs/src/tests/: adv_tests.rs  file_system_tests.rs  persistence_tests.rs  save_tests.rs
crates/bekoedit-markdown/: Cargo.toml  README.md
crates/bekoedit-markdown/benches/: reparse.rs
crates/bekoedit-markdown/src/: block.rs  fingerprint.rs  form.rs  index.rs  island.rs  lib.rs  patch.rs  preview.rs  range.rs  sections.rs  tests.rs  trivia.rs
crates/bekoedit-markdown/src/form/: images.rs  inline_fmt.rs  resolve.rs  tables.rs
crates/bekoedit-markdown/src/index/: blocks.rs
crates/bekoedit-markdown/src/index/blocks/: lists.rs
crates/bekoedit-markdown/src/tests/: adversarial_tests.rs  form_tests.rs  index_tests.rs  patch_tests.rs  preservation_tests.rs  preview_tests.rs
crates/bekoedit-markdown/src/tests/form_tests/: basic_tests.rs  inline_tests.rs  table_tests.rs
crates/bekoedit-ui-contract/: Cargo.toml  README.md
crates/bekoedit-ui-contract/src/: lib.rs  source_editor.rs  tests.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  distribution.md  editing-modes.md  getting-started.md  introduction.md  manual-release-checklist.md  mvp-acceptance.md  release-evidence.md  saving-and-conflicts.md  source-preservation.md
rfcs/: README.md
rfcs/appendices/: APPENDIX-A-source-preservation-glossary.md  APPENDIX-B-rfc-dependency-map.md
rfcs/done/: RFC-000-project-charter-and-architectural-invariants.md  RFC-001-repository-toolchain-and-ci-foundation.md  RFC-002-runtime-architecture-and-webview-boundary.md  RFC-003-workspace-model-and-recent-workspaces.md  RFC-004-native-file-explorer-and-file-tree-index.md  RFC-005-file-operations-and-external-file-watching.md  RFC-006-document-session-and-canonical-source-model.md  RFC-007-save-autosave-atomic-write-and-recovery.md  RFC-008-dirty-state-conflict-detection-and-external-modification-resolution.md  RFC-009-application-state-store-and-command-event-model.md  RFC-010-main-shell-layout-and-navigation-ux.md  RFC-011-text-mode-with-codemirror-6.md  RFC-012-preview-mode-and-rendered-markdown-display.md  RFC-013-markdown-parser-index-and-source-range-mapping.md  RFC-014-block-identity-revision-scope-and-projection-validity.md  RFC-015-sourcepatch-engine-and-source-preserving-mutation.md  RFC-016-form-mode-mvp-surface-and-safe-editable-blocks.md  RFC-017-raw-markdown-islands.md  RFC-018-js-form-adapter-and-semantic-edit-commands.md  RFC-019-mode-switching-and-projection-synchronization.md  RFC-020-command-palette-and-keyboard-shortcut-system.md  RFC-021-accessibility-baseline-and-interaction-contracts.md  RFC-022-settings-preferences-and-local-configuration.md  RFC-023-error-surfaces-status-bar-and-user-feedback.md  RFC-024-packaging-and-unsigned-distribution-ux.md  RFC-025-release-ci-smoke-tests-and-build-verification.md  RFC-026-mvp-acceptance-quality-gates-and-beta-readiness.md  RFC-027-table-editing-strategy.md  RFC-028-image-and-asset-management.md  RFC-029-outline-based-document-operations.md  RFC-030-richer-inline-formatting-in-form-mode.md  RFC-033-full-text-search.md  RFC-034-backlinks-and-reference-discovery.md  RFC-035-export-profiles.md  RFC-036-git-awareness.md  RFC-037-workspace-templates.md  RFC-038-advanced-markdown-extension-policy.md  (+1 more)
rfcs/proposed/: RFC-027-table-editing-strategy.md  (+26 more)
scripts/: check-release-artifacts.sh  check-rfcs.sh  run-macos.sh  run-windows.ps1  test-release-artifacts.sh
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
(+6 files in other folders)
