[workspace]
resolver = "3"
members = [
    "crates/bekoedit-app",
    "crates/bekoedit-core",
    "crates/bekoedit-fs",
    "crates/bekoedit-markdown",
    "crates/bekoedit-ui-contract",
]
# GUI crate is excluded from default builds so core logic stays testable headlessly.
default-members = [
    "crates/bekoedit-core",
    "crates/bekoedit-fs",
    "crates/bekoedit-markdown",
    "crates/bekoedit-ui-contract",
]

[workspace.package]
version = "0.13.1"
edition                 = "2024"
rust-version            = "1.88"
license                 = "Apache-2.0"
authors                 = ["nabbisen"]
repository              = "https://github.com/nabbisen/bekoedit"

[workspace.dependencies]
bekoedit-core               = { version = "0", path = "crates/bekoedit-core" }
bekoedit-fs                 = { version = "0", path = "crates/bekoedit-fs" }
bekoedit-markdown           = { version = "0", path = "crates/bekoedit-markdown" }
bekoedit-ui-contract        = { version = "0", path = "crates/bekoedit-ui-contract" }

dioxus                      = "0.7"
dioxus-swdir-tree           = "0.7"
dirs                        = "6"
notify                      = "8"
rfd                         = { version = "0.17", default-features = false, features = ["xdg-portal", "pollster"] }
trash                       = "5"

serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
thiserror                   = "2"
tokio                       = "1"
pulldown-cmark              = { version = "0.13", default-features = false, features = ["html"] }
tempfile                    = "3"
