[package]
name = "bekoedit"
version = "0.0.1"
edition = "2021"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"
description = "Text editor to sync between Markdown and editable HTML (Rust Tauri app)"
repository = "https://github.com/nabbisen/bekoedit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-message", "fs-all", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "^0.5.11"
uuid = "^1.6.1"
pulldown-cmark = "^0.9.3"
mdka = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
