[package]
name        = "bekoedit"
description = "bekoedit desktop application shell (Dioxus Desktop + OS-native WebView)."
readme      = "../../README.md"
version.workspace       = true
edition.workspace       = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[[bin]]
name = "bekoedit"
path = "src/main.rs"

[dependencies]
bekoedit-core               = { workspace = true }
bekoedit-fs                 = { workspace = true }
bekoedit-markdown           = { workspace = true }
bekoedit-ui-contract        = { workspace = true }

dioxus                      = { workspace = true, features = ["desktop"] }
dioxus-swdir-tree           = { workspace = true }
rfd                         = { workspace = true }
dirs                        = { workspace = true }

serde                       = { workspace = true }
serde_json                  = { workspace = true }
tempfile                    = { workspace = true }
tokio                       = { workspace = true, features = ["time"] }
