[package]
name        = "bekoedit-core"
description = "Document sessions, canonical source model, save lifecycle, and conflict detection for bekoedit."
readme      = "README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
bekoedit-fs                 = { workspace = true }
bekoedit-markdown           = { workspace = true }

serde                       = { workspace = true }
thiserror                   = { workspace = true }

[dev-dependencies]
tempfile                    = { workspace = true }
