[package]
name        = "bekoedit-fs"
description = "Workspace scoping, file tree index, safe file operations, atomic save, and recovery snapshots for bekoedit."
readme      = "README.md"
version.workspace       = true
edition.workspace       = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
dirs                        = { workspace = true }
notify                      = { workspace = true }
trash                       = { workspace = true }

serde                       = { workspace = true }
serde_json                  = { workspace = true }
thiserror                   = { workspace = true }

[dev-dependencies]
tempfile                    = { workspace = true }
