[package]
name        = "bekoedit-markdown"
description = "Markdown parser index, block identity, raw islands, source patch engine, and form-edit resolution for bekoedit"
readme      = "README.md"
version.workspace       = true
edition.workspace       = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
pulldown-cmark              = { workspace = true }

serde                       = { workspace = true }
thiserror                   = { workspace = true }

[[bench]]
name = "reparse"
harness = false
